fixed issue with about image centering on mobile

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -39,6 +39,8 @@
     }
 
     .section__pic-container {
+        display: flex;
+        justify-content: center;
         width: 275px;
         height: 275px;
         margin: 0 auto 2rem;
